Add some html to styling the game

--- a/index.html
+++ b/index.html
@@ -3,20 +3,28 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>¡¡Escape from the Pinkies!!</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <script type="text/javascript" src="lib/phaser.min.js"></script>
-	<script type="text/javascript" src="lib/underscore-min.js"></script>
+  <script type="text/javascript" src="lib/underscore-min.js"></script>
   <script type="text/javascript" src="js/pinky.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-        }
-    </style>
+
 </head>
 <body>
   <div class="wrapper">
+    <div class="logo">
+      <img src="assets/logo.png" />
+    </div>
     <div class="container" id="game-container">
 
+    </div>
+    <div class="social">
+      <div class="web">
+        <a href="http://undefinedmethod.com/" target="_blank"><img src="assets/undefinedmethod.png" /></a>
+      </div>
+      <div class="twitter">
+        <a href="https://twitter.com/" target="_blank"><img src="assets/twitter.png" /></a>
+      </div>
     </div>
   </div>
 
